--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,82 @@ body {
 }
 
 .container {
+    display: flex;
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+}
+
+.overview-hero-image h1{
+    display: inline-block;
+    justify-content: flex-end;
+}
+
+nav ul {
+    list-style: none;
+    justify-content: center;
+    display: inline-block;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-left: 20px; /* Adjust the margin as needed */
+}
+
+.overview-hero-image img{
+    width: 400px;
+    height: 400px;
+}
+
+
+
+.learn-about .container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: -5%;
+  padding: 0px 0; /* Adjust padding as needed */
+}
+
+.cards {
+  display: flex;
+}
+
+.card {
+  flex: 1;
+  margin: 0 2px; /* Adjust margin as needed */
+  margin-bottom: 1%;
+
+}
+
+.card img {
+  max-width: 100%;
+  height: 5%;
+  margin-bottom: 3%;
+}
+
+.card-body {
+  text-align: center;
+}
+
+.card-body h3 {
+  margin-top: 0; /* Add some space between heading and text */
+}
+
+.testing {
+    padding: 50px 0; /* Adjust padding as needed */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px; /* Adjust the gap as needed */
+    align-items: center;
+}
+
+.testing-description {
+    grid-column: 1 / span 1;
+}
+
+.cta {
+    grid-column: 2 / span 1;
+    justify-self: end; /* Align to the end of the grid cell */
 }
