--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,33 @@
 /* Add your CSS to this file */
 body {
-    margin: 0;
-    font-size: 16px;
+  margin: 0px;
+  font-size: 18px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",Arial, "Noto Sans", sans-serif;
 }
 
 .container {
-
-    margin: 0 auto;
-    max-width: 980px;
-    width: 100%;
+  max-width: 1000px; /* Set a maximum width for the containers */
+  margin: 0 auto; /* Center the containers horizontally */
+  padding: 20px; /
 }
-
-/* Add this CSS to your styles.css file */
 
 /* Header */
 header {
+  background-color: #ffffff;
+  padding: 10px 0;
+}
+
+header .container{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
 }
 
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+
 }
 
 nav li {
@@ -32,17 +35,28 @@ nav li {
   margin-left: 20px;
 }
 
+nav li a{
+  color: #6b7280;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #5A67D8; /* Link color on hover */
+}
+
 /* Overview Hero */
 .overview-hero .container{
   display: flex;
   align-items: center;
+  background-color: #E2E8F0;
 }
 
 .overview-hero-text {
   float: left;
   text-align: left;
-  margin-left: -130%;  
+  margin-left: -120%;  
   text-wrap: auto;
+  padding-right: 1%;
 }
 
 .overview-hero-image img {
@@ -55,12 +69,15 @@ nav li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0px 0; /* Adjust padding as needed */
+  padding: 5px 0; /* Adjust padding as needed */
+  margin-top: 3%;
 }
 
 .learn-about h2{
   align-self: flex-start;
-  margin-bottom: 2%;
+  margin-bottom: 5%;
+  color: #48BB78;
+  font-size: 24px;
 }
 
 .cards {
@@ -71,14 +88,13 @@ nav li {
 
 }
 
-.card {
-  flex-basis: calc(33.33% - 10px); /* Set width for each card, accounting for margin */
-  margin-bottom: 20px; /* Add margin between cards */
-  background-color: #fff; /* Set background color if desired */
-  border: 1px solid #ccc; /* Add border for card */
-  border-radius: 8px; /* Add border radius for rounded corners */
-
+.card{
+  border: 1px solid #E2E8F0; /* Add border for card */
+  border-radius: 5px; /* Add border radius for rounded corners */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  margin-bottom: 10%;
 }
+
 
 .card img {
   width: 150px;
@@ -92,33 +108,44 @@ nav li {
   margin: 10px;
 }
 
+.card-body h3{
+  color: #48BB78;
+  font-size: 21px;
+}
+
 /* Testing Section */
-.testing{
-  padding: 100px;
+
+.testing .container{
+  background-color: #4A5568;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 20px;
+  align-items: center;
 }
+
 .testing-desciption{
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  padding: 0px 0; /* Adjust padding as needed */
+  flex-grow: 1; /* Allow the description to take up remaining space */
+  color: white;
+  padding: 80px;
 }
 
-.testing-desciption p{
-  display: flex;
-  padding-right: 35%;
-
+.cta{
+  text-align: right;
+  padding-right: 100px;
 }
-
-.testing a{
-  display: flex;
-  margin-top: -5%;
-  margin-left: 85%;
+.cta a {
+  text-decoration: none;
+  color: white;
 }
 
 .stories article {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+}
+
+.stories h2{
+  color: #5A67D8;
 }
 
 .stories article img {
@@ -133,9 +160,60 @@ nav li {
   flex-grow: 1;
   padding-right: 6%;
   justify-content: space-around;
+  
+}
+.article-body a{
+  text-decoration: none;
+  color: #5A67D8;
 }
 
+.newsletter {
+  text-align: center;
+  padding: 0%;
+  
+}
 
+.newsletter .container{
+  color: white;
+  margin-bottom: 0;
+  background-color: #48BB78;
+}
 
+.newsletter h3{
+  padding-top: 30px;
+}
 
+.form-group {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+input[type="email"] {
+  width: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 10%;
+  border-radius: 5px;
+}
+
+.cta .btn {
+  padding: 10px 20px;
+  background-color: #48BB78;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.newsletter .btn{
+  background-color: #5A67D8;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid #5A67D8;
+}
+
+footer .container {
+  background-color: #4A5568;
+  color: #fff; /* Set text color to white for better readability */
+}
 
