--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ header {
   padding: 10px 0;
 }
 
+header h1 {
+  font-size: 18px;
+}
+
 header .container{
   display: flex;
   justify-content: space-between;
@@ -84,7 +88,8 @@ nav a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
-  
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .card{
