--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Add your CSS to this file */
+/* 620153702 CSS file */
 body {
   margin: 0px;
   font-size: 18px;
@@ -6,12 +6,11 @@ body {
 }
 
 .container {
-  max-width: 1000px; /* Set a maximum width for the containers */
-  margin: 0 auto; /* Center the containers horizontally */
-  padding: 20px; /
+  max-width: 1000px; 
+  margin: 0 auto; 
+  padding: 20px; 
 }
 
-/* Header */
 header {
   background-color: #ffffff;
   padding: 10px 0;
