--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ nav a:hover {
 
 .card{
   border: 1px solid #E2E8F0; /* Add border for card */
-  border-radius: 5px; /* Add border radius for rounded corners */
+  border-radius: 5px; 
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   margin-bottom: 10%;
 }
